Video com erro.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Indústria: Indústrias processam os produtos agrícolas (ex: leite vira queijo,
         <iframe width="560"
          height="315" 
          src="https://www.youtube.com/live/LS7pA3KdklU?si=4nWT7jxvipqweLEU"
-            title="CONEXÃO CAMPO CIDADE" frameborder="0" allowfullscreen></iframe>
+            title="CONEXÃO CAMPO CIDADE" allowfullscreen></iframe>
            
 
     </div>
